tests/baselines/reference/parserEnumDeclaration2.errors.txt
parserEnumDeclaration2.ts(1,16): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
parserEnumDeclaration2.ts(2,3): error TS1038: A 'declare' modifier cannot be used in an already ambient context.


==== parserEnumDeclaration2.ts (2 errors) ====
    declare module M {
                   ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
      declare enum E {
      ~~~~~~~
!!! error TS1038: A 'declare' modifier cannot be used in an already ambient context.
      }
    }